# GreedySnake

./: .gitignore  CMakeLists.txt  Food.cpp  Food.h  Game.cpp  Game.h  README.md  main.cpp
snake/: Body.cpp  Body.h  Head.cpp  Head.h  Snake.cpp  Snake.h
